--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E9E9E9"
-    tools:context=".ConfigFragment">
+    tools:context=".FragmentsActivities.ConfiguracionFragments.ConfigFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -170,6 +170,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/btnCerrar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -178,6 +179,7 @@
                     android:paddingVertical="15dp"
                     android:paddingHorizontal="30dp"
                     android:background="@drawable/background_close"
+                    android:clickable="true"
                     >
 
                     <TextView
