--- a/app/src/main/res/layout/fragment_agregar_clientes.xml
+++ b/app/src/main/res/layout/fragment_agregar_clientes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AgregarClientesFragment">
+    tools:context=".FragmentsActivities.ClientesFragments.AgregarClientesFragment">
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -63,7 +63,7 @@
                 >
 
                 <LinearLayout
-                    android:id="@+id/foto"
+                    android:id="@+id/fotoPerfil"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -72,6 +72,7 @@
                     android:layout_gravity="center_horizontal">
 
                     <ImageView
+                        android:id="@+id/imageViewFoto"
                         android:layout_width="wrap_content"
                         android:layout_height="150dp"
                         android:src="@drawable/icon_cambiar_foto"
