--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -1,130 +1,148 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cliente1"
-    android:layout_width="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_marginHorizontal="15dp"
-    android:layout_marginTop="10dp"
-    android:background="@drawable/card_white"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="20dp">
+    android:id="@+id/mainLayout">
 
-    <TextView
-        android:id="@+id/cliente_titulo1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edgar Omar Mancilla Vaca"
-        android:textColor="#000000"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <View
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/cliente_titulo1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/background" />
-
-    <ImageView
-        android:id="@+id/foto_cliente"
-        android:layout_width="70dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/cliente_titulo1"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/cambiar_foto"
-        android:scaleType="centerCrop"
-        />
-
-    <TextView
-        android:id="@+id/tituloCorreo1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/cliente_titulo1"
-        android:layout_toRightOf="@id/foto_cliente"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
-        android:text="Correo:"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="12dp">
 
-    <TextView
-        android:id="@+id/txtCorreo1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cliente_titulo1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="15dp"
-        android:layout_toRightOf="@id/tituloCorreo1"
-        android:text="edgarmncllav04@gmail.com"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/cliente1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/card_white"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="20dp">
 
-    <TextView
-        android:id="@+id/tituloTelefono1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtCorreo1"
-        android:layout_toRightOf="@id/foto_cliente"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:text="Telefono:"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/cliente_titulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edgar Omar Mancilla Vaca"
+                android:textColor="#000000"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtTelefono1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtCorreo1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/tituloTelefono1"
-        android:text="5511343686"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/cliente_titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/background" />
 
-    <TextView
-        android:id="@+id/tituloPrestamos1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tituloTelefono1"
-        android:layout_toRightOf="@id/foto_cliente"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:text="Prestamos Activos:"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/foto_cliente"
+                android:layout_width="70dp"
+                android:layout_height="100dp"
+                android:layout_below="@id/cliente_titulo"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/cambiar_foto"
+                android:scaleType="centerCrop"
+                />
 
-    <TextView
-        android:id="@+id/txtPrestamos1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tituloTelefono1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/tituloPrestamos1"
-        android:text="2"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+            <TextView
+                android:id="@+id/tituloCorreo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/cliente_titulo"
+                android:layout_toRightOf="@id/foto_cliente"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:text="Correo:"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtDetalles1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tituloPrestamos1"
-        android:layout_toRightOf="@id/foto_cliente"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
-        android:text="Ver Detalles"
-        android:textColor="@color/primary_color"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        android:clickable="true"
-        android:onClick="onClick"/>
+            <TextView
+                android:id="@+id/txtCorreo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/cliente_titulo"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@id/tituloCorreo"
+                android:text="edgarmncllav04@gmail.com"
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/tituloTelefono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtCorreo"
+                android:layout_toRightOf="@id/foto_cliente"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:text="Telefono:"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtTelefono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtCorreo"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/tituloTelefono"
+                android:text="5511343686"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tituloPrestamos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tituloTelefono"
+                android:layout_toRightOf="@id/foto_cliente"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:text="Prestamos Activos:"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtPrestamos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tituloTelefono"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/tituloPrestamos"
+                android:text="2"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txtDetalles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tituloPrestamos"
+                android:layout_toRightOf="@id/foto_cliente"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
+                android:text="Ver Detalles"
+                android:textColor="@color/primary_color"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                android:clickable="true"
+                android:onClick="onClick"/>
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
