--- a/app/src/main/res/layout/fragment_agregar_solicitud.xml
+++ b/app/src/main/res/layout/fragment_agregar_solicitud.xml
@@ -68,6 +68,21 @@
                     android:paddingVertical="12dp"
                     android:textColor="#1D2262" />
 
+                <EditText
+                    android:id="@+id/campoID_cliente"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/border_edittext_background"
+                    android:ems="10"
+                    android:hint="ID Cliente"
+                    android:inputType="number"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="12dp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="#1D2262" />
+
+
 
                 <EditText
                     android:id="@+id/campoOcupacionSoli"
@@ -100,7 +115,7 @@
                         android:background="@drawable/border_edittext_background"
                         android:ems="10"
                         android:hint="dd/mm/aaaa"
-                        android:inputType="textPersonName"
+                        android:inputType="date"
                         android:paddingHorizontal="20dp"
                         android:paddingVertical="12dp"
                         android:textColor="#1D2262" />
@@ -131,7 +146,7 @@
                     android:background="@drawable/border_edittext_background"
                     android:ems="10"
                     android:hint="Monto Solicitado"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingHorizontal="20dp"
                     android:paddingVertical="12dp"
                     android:textColor="#1D2262" />
@@ -145,7 +160,7 @@
                     android:background="@drawable/border_edittext_background"
                     android:ems="10"
                     android:hint="Ingreso Mensual"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:paddingHorizontal="20dp"
                     android:paddingVertical="12dp"
                     android:textColor="#1D2262" />
