--- a/app/src/main/res/layout/fragment_detalles_cliente.xml
+++ b/app/src/main/res/layout/fragment_detalles_cliente.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetallesClienteFragment">
+    tools:context="FragmentsActivities.ClientesFragments.DetallesClienteFragment">
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E9E9E9"
-        tools:context=".DetallesClienteFragment"
+        tools:context=".FragmentsActivities.ClientesFragments.DetallesClienteFragment"
         >
 
         <RelativeLayout
@@ -77,10 +77,34 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="ID:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <EditText
+                    android:id="@+id/campoID"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="ID"
+                    android:inputType="textPersonName"
+                    android:textColor="#1D2262"
+                    android:paddingVertical="12dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/border_edittext_background"
+                    android:layout_gravity="center"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Nombre(s):"
                     android:textColor="@color/primary_color"
                     android:textStyle="bold"
                     android:textSize="16dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginBottom="10dp"/>
 
                 <EditText
