--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -18,10 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/card_white"
             android:paddingHorizontal="20dp"
+            android:background="@drawable/card_white"
             android:paddingVertical="20dp">
 
             <TextView
@@ -52,13 +50,38 @@
                 />
 
             <TextView
-                android:id="@+id/tituloCorreo"
+                android:id="@+id/tituloID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cliente_titulo"
                 android:layout_toRightOf="@id/foto_cliente"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
+                android:text="ID:"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/cliente_titulo"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@id/tituloID"
+                android:text="1"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tituloCorreo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtID"
+                android:layout_toRightOf="@id/foto_cliente"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Correo:"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -68,9 +91,9 @@
                 android:id="@+id/txtCorreo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cliente_titulo"
+                android:layout_below="@id/txtID"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@id/tituloCorreo"
                 android:text="edgarmncllav04@gmail.com"
                 android:textColor="#000000"
@@ -101,36 +124,13 @@
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tituloPrestamos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tituloTelefono"
-                android:layout_toRightOf="@id/foto_cliente"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:text="Prestamos Activos:"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txtPrestamos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tituloTelefono"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/tituloPrestamos"
-                android:text="2"
-                android:textColor="#000000"
-                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/txtDetalles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tituloPrestamos"
+                android:layout_below="@id/txtTelefono"
                 android:layout_toRightOf="@id/foto_cliente"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="8dp"
