--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -12,119 +12,148 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp">
 
-        <RelativeLayout
+        <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/cliente1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:paddingHorizontal="20dp"
-            android:background="@drawable/card_white"
-            android:paddingVertical="20dp">
+            android:paddingVertical="15dp"
+            android:orientation="vertical"
+            >
 
-            <TextView
-                android:id="@+id/cliente_titulo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Edgar Omar Mancilla Vaca"
-                android:textColor="#000000"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginHorizontal="10dp">
+
+                <TextView
+                    android:id="@+id/cliente_titulo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".90"
+                    android:text="Edgar Omar Mancilla Vaca"
+                    android:textColor="#000000"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1" />
+
+
+                <ImageView
+                    android:id="@+id/foto_cliente"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight=".10"
+                    android:layout_below="@id/cliente_titulo"
+                    android:src="@drawable/icon_depositar_cliente"
+                    />
+
+            </LinearLayout>
+
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@id/cliente_titulo"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
                 android:background="@drawable/background" />
 
-            <ImageView
-                android:id="@+id/foto_cliente"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_below="@id/cliente_titulo"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/cambiar_foto"
-                android:scaleType="centerCrop"
-                />
 
-            <TextView
-                android:id="@+id/tituloID"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cliente_titulo"
-                android:layout_toRightOf="@id/foto_cliente"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
-                android:text="ID:"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:gravity="center_vertical"
+                >
 
-            <TextView
-                android:id="@+id/txtID"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tituloID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ID del Cliente:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cliente_titulo"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@id/tituloID"
-                android:text="1"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:gravity="center_vertical"
+                >
 
-            <TextView
-                android:id="@+id/tituloCorreo"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tituloCorreo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Correo:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtCorreo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="edgarmncllav04@gmail.com"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/txtID"
-                android:layout_toRightOf="@id/foto_cliente"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:text="Correo:"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:gravity="center_vertical"
+                >
 
-            <TextView
-                android:id="@+id/txtCorreo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtID"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/tituloCorreo"
-                android:text="edgarmncllav04@gmail.com"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/tituloTelefono"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Telefono:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tituloTelefono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtCorreo"
-                android:layout_toRightOf="@id/foto_cliente"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:text="Telefono:"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txtTelefono"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtCorreo"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/tituloTelefono"
+                    android:text="5511343686"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/txtTelefono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtCorreo"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/tituloTelefono"
-                android:text="5511343686"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/txtDetalles"
@@ -133,7 +162,7 @@
                 android:layout_below="@id/txtTelefono"
                 android:layout_toRightOf="@id/foto_cliente"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:text="Ver Detalles"
                 android:textColor="@color/primary_color"
                 android:textSize="18sp"
@@ -141,7 +170,7 @@
                 android:clickable="true"
                 android:onClick="onClick"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
