--- a/app/src/main/res/layout/fragment_prestamos.xml
+++ b/app/src/main/res/layout/fragment_prestamos.xml
@@ -146,9 +146,8 @@
                 android:paddingBottom="20dp">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
 
             </LinearLayout>
