Se soluciono el problema con la interfaz prestamo

--- a/app/src/main/res/layout/fragment_prestamos.xml
+++ b/app/src/main/res/layout/fragment_prestamos.xml
@@ -146,6 +146,7 @@
                 android:paddingBottom="20dp">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/itemPrestamo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
