--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -94,7 +94,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".80"
-                android:text="Prestamos"
+                android:text="Préstamos"
                 android:textSize="32sp"
                 android:textColor="#000000"
                 android:textStyle="bold"
@@ -215,7 +215,7 @@
                 android:id="@+id/card3_titulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Monto total prestado"
+                android:text="Total prestado"
                 android:textSize="25sp"
                 android:textColor="@color/secondary_color"
                 android:textStyle="bold"
@@ -301,7 +301,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".80"
-            android:text="Actividad Reciente"
+            android:text="Actividad reciente"
             android:textSize="32sp"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -346,7 +346,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".80"
-                    android:text="Prestamo aprovado por (monto)"
+                    android:text="Prestamo aprobado por (monto)"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="#000000"
@@ -430,7 +430,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".80"
-                    android:text="Prestamo aprovado por (monto)"
+                    android:text="Prestamo aprobado por (monto)"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:textColor="#000000"
