--- a/app/src/main/res/layout/fragment_ver_solicitud.xml
+++ b/app/src/main/res/layout/fragment_ver_solicitud.xml
@@ -108,7 +108,16 @@
                 >
 
                 <TextView
-                    android:id="@+id/campoOcupacionVerSoli"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ocupación:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <TextView
+                    android:id="@+id/campoOcupacion"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
@@ -121,6 +130,17 @@
                     />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fecha:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
+
+                <TextView
                     android:id="@+id/campoFecha"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
@@ -129,9 +149,18 @@
                     android:paddingVertical="12dp"
                     android:paddingHorizontal="20dp"
                     android:textColor="#54555B"
-                    android:layout_marginTop="25dp"
                     android:textSize="16dp"
                     />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monto Solicitado:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
 
                 <TextView
                     android:id="@+id/campoMontoS"
@@ -139,7 +168,6 @@
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
                     android:text="Monto Solicitado"
-                    android:layout_marginTop="25dp"
                     android:textColor="#54555B"
                     android:paddingVertical="12dp"
                     android:paddingHorizontal="20dp"
@@ -148,12 +176,22 @@
                     />
 
                 <TextView
-                    android:id="@+id/campoIngresoVerSoli"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ingreso Mensual:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <TextView
+                    android:id="@+id/campoIngreso"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
                     android:text="Ingreso Mensual"
-                    android:layout_marginTop="25dp"
+
                     android:textColor="#54555B"
                     android:paddingVertical="12dp"
                     android:paddingHorizontal="20dp"
@@ -161,20 +199,41 @@
                     android:layout_gravity="center"
                     />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monto Aprobado:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
+
                 <EditText
                     android:id="@+id/campoMontoA"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:hint="Monto Aprovado"
+                    android:hint="Monto Aprobado"
                     android:ems="10"
-                    android:layout_marginTop="25dp"
                     android:textColor="#54555B"
                     android:paddingVertical="12dp"
                     android:paddingHorizontal="20dp"
                     android:background="@drawable/border_edittext_background"
                     android:layout_gravity="center"
                     />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monto Aprobado:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
 
                 <EditText
                     android:id="@+id/campoDictamen"
@@ -183,7 +242,6 @@
                     android:textSize="16dp"
                     android:hint="Dictamen"
                     android:ems="10"
-                    android:layout_marginTop="25dp"
                     android:textColor="#54555B"
                     android:paddingVertical="12dp"
                     android:paddingHorizontal="20dp"
@@ -191,12 +249,22 @@
                     android:layout_gravity="center"
                     />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fecha Dictamen:"
+                    android:textColor="@color/primary_color"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
+
                 <LinearLayout
                     android:id="@+id/layoutFecha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="25dp"
                     android:gravity="center_vertical">
 
                     <EditText
